src/main/java/com/example/demo3/_core/errors/Exception403.java
package com.example.demo3._core.errors;

public class Exception403 extends  RuntimeException{
    public Exception403(String msg) {
        super(msg);
    }
}
